test/runnable/obj_is.nt
module obj_is;

macro import std.macro.assert;

class Object
{
    this() { }
}

void main() {
    auto a = new Object;
    auto b = new Object;
    assert(a is a);
    assert(!(a is b));
    assert(a !is b);
    assert(!(a !is a));
}
