test/fail_compilation/lambda_escape_class_field.nt
module lambda_escape_class_field;

void main() {
    auto lambda = a => 0;
    alias L = typeof(lambda);
    auto c = new C!L(lambda);
}

class C(T) {
    T value;
    this(T value) {
        // this should fail (field assignment to opaque container)
        this.value = value;
    }
}
